@@ -7,6 +7,7 @@ package org.geoserver.web.data.workspace;
 
 import static org.geoserver.web.services.BaseServiceAdminPage.WORKSPACE_ADMIN_SERVICE_ACCESS;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
@@ -81,6 +82,7 @@ import org.geotools.util.logging.Logging;
 // TODO WICKET8 - Verify this page works OK
 public class WorkspaceEditPage extends GeoServerSecuredPage {
 
+    @Serial
     private static final long serialVersionUID = 4341324830412716976L;
 
     private static final Logger LOGGER = Logging.getLogger("org.geoserver.web.data.workspace");
@@ -122,8 +124,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
         if (ns == null) {
             // unfortunately this may happen if the namespace associated to the workspace was
             // deleted or never created
-            throw new RuntimeException(
-                    String.format("Workspace '%s' associated namespace doesn't exists.", ws.getName()));
+            throw new RuntimeException("Workspace '%s' associated namespace doesn't exists.".formatted(ws.getName()));
         }
 
         nsModel = new NamespaceDetachableModel(ns);
@@ -132,6 +133,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
         List<ITab> tabs = new ArrayList<>();
         tabs.add(new AbstractTab(new Model<>("Basic Info")) {
 
+            @Serial
             private static final long serialVersionUID = 5216769765556937554L;
 
             @Override
@@ -147,6 +149,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
         if (AccessDataRuleInfoManager.canAccess()) {
             tabs.add(new AbstractTab(new Model<>("Security")) {
 
+                @Serial
                 private static final long serialVersionUID = 5216769765556937554L;
 
                 @Override
@@ -166,11 +169,13 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
         tabbedPanel = new TabbedPanel<>("tabs", tabs) {
 
+            @Serial
             private static final long serialVersionUID = 1L;
 
             @Override
             protected WebMarkupContainer newLink(String linkId, final int index) {
                 return new SubmitLink(linkId) {
+                    @Serial
                     private static final long serialVersionUID = 1L;
 
                     @Override
@@ -191,6 +196,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
     private SubmitLink submitLink() {
         return new SubmitLink("save") {
 
+            @Serial
             private static final long serialVersionUID = -3462848930497720229L;
 
             @Override
@@ -295,6 +301,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
      * Data object to hold onto transient settings, and maintain state of enabled for the workspace.
      */
     static class Settings implements Serializable {
+        @Serial
         private static final long serialVersionUID = -5855608735160516252L;
 
         /** track selection */
@@ -306,7 +313,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     static class ExistingSettingsModel extends LoadableDetachableModel<SettingsInfo> {
 
+        @Serial
         private static final long serialVersionUID = -8203239697623788188L;
+
         IModel<WorkspaceInfo> wsModel;
 
         ExistingSettingsModel(IModel<WorkspaceInfo> wsModel) {
@@ -322,7 +331,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     static class NewSettingsModel extends Model<SettingsInfo> {
 
+        @Serial
         private static final long serialVersionUID = -4365626821652771933L;
+
         IModel<WorkspaceInfo> wsModel;
         SettingsInfo info;
 
@@ -355,6 +366,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     class WsEditInfoPanel extends Panel {
 
+        @Serial
         private static final long serialVersionUID = -8487041433764733692L;
 
         boolean defaultWs;
@@ -397,6 +409,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     class SettingsPanel extends FormComponentPanel<Serializable> {
 
+        @Serial
         private static final long serialVersionUID = -1580928887379954134L;
 
         WebMarkupContainer settingsContainer;
@@ -421,6 +434,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
             add(new CheckBox("enabled", new PropertyModel<>(set, "enabled"))
                     .add(new AjaxFormComponentUpdatingBehavior("click") {
+                        @Serial
                         private static final long serialVersionUID = -7851699665702753119L;
 
                         @Override
@@ -478,6 +492,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
      * the workspace.
      */
     static class Service implements Serializable {
+        @Serial
         private static final long serialVersionUID = 3283857206025172687L;
 
         /** track selection */
@@ -492,7 +507,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     static class NewServiceModel extends Model<ServiceInfo> {
 
+        @Serial
         private static final long serialVersionUID = -3467556623909292282L;
+
         IModel<WorkspaceInfo> wsModel;
         Class<ServiceInfo> serviceClass;
         ServiceInfo service;
@@ -530,7 +547,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     static class ExistingServiceModel extends LoadableDetachableModel<ServiceInfo> {
 
+        @Serial
         private static final long serialVersionUID = -2170117760214309321L;
+
         IModel<WorkspaceInfo> wsModel;
         Class<ServiceInfo> serviceClass;
 
@@ -547,7 +566,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
 
     class ServicesPanel extends FormComponentPanel<Serializable> {
 
+        @Serial
         private static final long serialVersionUID = 7375904545106343626L;
+
         List<Service> services;
 
         public ServicesPanel(String id, final IModel<WorkspaceInfo> wsModel) {
@@ -558,6 +579,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
             services = services(wsModel);
             ListView<Service> serviceList = new ListView<>("services", services) {
 
+                @Serial
                 private static final long serialVersionUID = -4142739871430618450L;
 
                 @Override
@@ -576,6 +598,7 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
                     link.setEnabled(isEnabled);
 
                     AjaxCheckBox enabled = new AjaxCheckBox("enabled", new PropertyModel<>(service, "enabled")) {
+                        @Serial
                         private static final long serialVersionUID = 6369730006169869310L;
 
                         @Override
@@ -637,7 +660,9 @@ public class WorkspaceEditPage extends GeoServerSecuredPage {
         }
 
         private class ServiceLink extends Link<Service> {
+            @Serial
             private static final long serialVersionUID = 1111536301891090436L;
+
             private final IModel<WorkspaceInfo> wsModel;
 
             public ServiceLink(Service service, IModel<WorkspaceInfo> wsModel) {
